Np 58601 accept doi log entry (#2053)
* doi reserved log entry

* code review

* persisting doi requested event

* work in progress

* doi log messages for topic doi accepted and doi rejected

* removing annotation